<?xml version="1.0" encoding="utf-8"?>
<com.example.recyclerview.flowlayout.FlowLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/flow"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="#ff0000"
    app:flFlow="true"
    app:flChildSpacing="8dp"
    app:flChildSpacingForLastRow="align"
    app:flRowSpacing="8dp">

    <com.example.recyclerview.flowlayout.list1.MarqueeTextView
        android:id="@+id/mtv_room_name"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:marquee_text_color="#262626"
        app:marquee_text_size="16sp" />

    <TextView
        android:id="@+id/tv_test1"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/label_bg"
        android:gravity="center"
        android:padding="8dp"
        android:visibility="visible"
        android:text="@string/sun" />

    <TextView
        android:id="@+id/tv_test2"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/label_bg"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/mon" />

    <TextView
        android:id="@+id/tv_test3"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/label_bg"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/tue" />

    <TextView
        android:id="@+id/tv_test4"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/label_bg"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/wed" />

    <TextView
        android:id="@+id/tv_test5"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/label_bg"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/thu" />

    <TextView
        android:id="@+id/tv_test6"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/label_bg"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/fri" />

    <TextView
        android:id="@+id/tv_test7"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/label_bg"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/sat" />

    <TextView
        android:id="@+id/tv_test8"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/label_bg"
        android:gravity="center"
        android:padding="8dp"
        android:visibility="visible"
        android:text="@string/sun" />

    <TextView
        android:id="@+id/tv_test9"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/label_bg"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/mon" />

    <TextView
        android:id="@+id/tv_test10"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/label_bg"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/tue" />

    <TextView
        android:id="@+id/tv_test11"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/label_bg"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/wed" />

    <TextView
        android:id="@+id/tv_test12"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/label_bg"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/thu" />

    <TextView
        android:id="@+id/tv_test13"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/label_bg"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/fri" />

    <TextView
        android:id="@+id/tv_test14"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/label_bg"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/sat" />

    <TextView
        android:id="@+id/tv_test15"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/label_bg"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/sat" />

</com.example.recyclerview.flowlayout.FlowLayout>


