<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:visibility="visible"
        android:text="昵称昵称" />

    <com.example.recyclerview.flowlayout.FlowLayout
        android:id="@+id/flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ff0000"
        app:flFlow="true"
        app:flChildSpacing="8dp"
        app:flChildSpacingForLastRow="align"
        app:flRowSpacing="8dp">

        <TextView
            android:id="@+id/tv_test1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:gravity="center"
            android:padding="8dp"
            android:visibility="visible"
            android:text="@string/sun" />

        <TextView
            android:id="@+id/tv_test2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/mon" />

        <TextView
            android:id="@+id/tv_test3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/tue" />

        <TextView
            android:id="@+id/tv_test4"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/wed" />

        <TextView
            android:id="@+id/tv_test5"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/thu" />

        <TextView
            android:id="@+id/tv_test6"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/fri" />

        <TextView
            android:id="@+id/tv_test7"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sat" />

        <TextView
            android:id="@+id/tv_test8"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:gravity="center"
            android:padding="8dp"
            android:visibility="visible"
            android:text="@string/sun" />

        <TextView
            android:id="@+id/tv_test9"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/mon" />

        <TextView
            android:id="@+id/tv_test10"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/tue" />

        <TextView
            android:id="@+id/tv_test11"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/wed" />

        <TextView
            android:id="@+id/tv_test12"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/thu" />

        <TextView
            android:id="@+id/tv_test13"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/fri" />

        <TextView
            android:id="@+id/tv_test14"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sat" />

        <TextView
            android:id="@+id/tv_test15"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sat" />

    </com.example.recyclerview.flowlayout.FlowLayout>
</LinearLayout>

